// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`declaration.css 1`] = `
a {
    margin: $bar,;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a {
  margin: $bar;
}

`;

exports[`declaration.css 2`] = `
a {
    margin: $bar,;
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a {
  margin: $bar;
}

`;

exports[`list.css 1`] = `
$colors: hotpink deepskyblue firebrick,;
$list: (a,);
$list: ('Helvetica', 'Arial', sans-serif,);
$colors: (
  "red",
  "blue"
);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$colors: hotpink deepskyblue firebrick;
$list: (a);
$list: (
  "Helvetica",
  "Arial",
  sans-serif
);
$colors: (
  "red",
  "blue"
);

`;

exports[`list.css 2`] = `
$colors: hotpink deepskyblue firebrick,;
$list: (a,);
$list: ('Helvetica', 'Arial', sans-serif,);
$colors: (
  "red",
  "blue"
);
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$colors: hotpink deepskyblue firebrick;
$list: (a);
$list: (
  "Helvetica",
  "Arial",
  sans-serif,
);
$colors: (
  "red",
  "blue",
);

`;

exports[`map.css 1`] = `
$map: (
    small: 767px,
    medium: 992px,
    large: 1200px,
);
$map: (
    'medium': (min-width: 800px),
    'large': (min-width: 1000px),
    'huge': (min-width: 1200px),
);
$map: ( small: 767px, medium: 992px, large: 1200px );
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$map: (
  small: 767px,
  medium: 992px,
  large: 1200px
);
$map: (
  "medium": (min-width: 800px),
  "large": (min-width: 1000px),
  "huge": (min-width: 1200px)
);
$map: (
  small: 767px,
  medium: 992px,
  large: 1200px
);

`;

exports[`map.css 2`] = `
$map: (
    small: 767px,
    medium: 992px,
    large: 1200px,
);
$map: (
    'medium': (min-width: 800px),
    'large': (min-width: 1000px),
    'huge': (min-width: 1200px),
);
$map: ( small: 767px, medium: 992px, large: 1200px );
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$map: (
  small: 767px,
  medium: 992px,
  large: 1200px,
);
$map: (
  "medium": (min-width: 800px),
  "large": (min-width: 1000px),
  "huge": (min-width: 1200px),
);
$map: (
  small: 767px,
  medium: 992px,
  large: 1200px,
);

`;

exports[`selector_list.css 1`] = `
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm,
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm, {

}

.some-class, {
&.another-class, {
     color: red;
 }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm,
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm {
}

.some-class {
  &.another-class {
    color: red;
  }
}

`;

exports[`selector_list.css 2`] = `
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm,
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm, {

}

.some-class, {
&.another-class, {
     color: red;
 }
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm,
asdasldaskdhjkashdahsdkjahskdjhakjsdkjahsdhkasdhkajsdhakjsdhkajsdhjkahskjdkjahsjkdjkakjsdm {
}

.some-class {
  &.another-class {
    color: red;
  }
}

`;

exports[`variable.css 1`] = `
$test: 1,;
$margin: 0, 2em, 0, 1.5em,;

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$test: 1;
$margin: 0, 2em, 0, 1.5em;

`;

exports[`variable.css 2`] = `
$test: 1,;
$margin: 0, 2em, 0, 1.5em,;

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
$test: 1;
$margin: 0, 2em, 0, 1.5em;

`;
